# NUC

./: .gitignore  LOGIC_WEB  TIT_TIT  multi_nav2.rviz  odom.rviz  robot_carto_slam.rviz  robot_slamtoolbox.rviz  tit_tit
Arduino/Call_v3_main/esp_bogoi_v1/: esp_bogoi_v1.ino
Arduino/Call_v3_main/esp_robot_v1/: esp_robot_v1.ino
Arduino/Call_v4_main/bo_chuyen_tiep_main/: bo_chuyen_tiep_main.ino
Arduino/Call_v4_main/bo_next_v4/: bo_next_v4.ino
Arduino/Call_v4_main/bo_tb_main/: bo_tb_main.ino
Arduino/Call_v4_test/bo_tb_v4/: bo_tb_v4.ino
Arduino/tesst/: tesst.ino
Arduino/v3_da_nang/: v3_da_nang.ino
Arduino/v3_rgb/: v3_rgb.ino
Khanh/BLE_communicate/ble_nhan/: ble_nhan.ino
Khanh/BLE_communicate/ble_phat/: ble_phat.ino
Khanh/Bo_goi_v1/em-y-ta/: em-y-ta.ino
Khanh/Bo_goi_v2/main_PK/: main_PK.ino
Khanh/Bo_goi_v2/mian_Y4/: mian_Y4.ino
Khanh/Call_v3_ble_khanh/: bo_goi_full_options.ino
Khanh/Call_v4_test/Bo_receive/: Bo_receive.ino
Khanh/Call_v4_test/bo_chuyen_tiep/: bo_chuyen_tiep.ino
Khanh/Call_v4_test/bo_tb_v4/: bo_tb_v4.ino
Khanh/Create_IR_NEC/: tao_ma_IR_NEC.ino
Khanh/Create_token_Segway/: token.ino
Khanh/Test_IR_code/: test_hong_ngoai_v1.ino
Khanh/bo_next_v4__v1/: bo_next_v4__v1.ino
Khanh/bo_phat_ir_v1/: bo_phat_ir_v1.ino
Khanh/success_ok_dz/: success_ok_dz.ino
bag/: rosbag_auto.xlsx
bag/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
bag/src/ros_bag_auto/: CMakeLists.txt  package.xml
docker_learn/ros2_trainning/.devcontainer/: Dockerfile  devcontainer.json
docker_learn/ros2_trainning/rosbag2_2024_01_18-11_38_26/: metadata.yaml
docker_learn/ros2_trainning/type_custom/: CMakeLists.txt  package.xml
docker_learn/ros2_trainning/ws/: multisim.launch.py  turtlesim.yaml  turtlesim1.yaml
docker_learn/ros2_trainning/ws/ros2_test/: CMakeLists.txt  package.xml
docker_learn/ros2_trainning/ws/ros2_test/src/: publisher.cpp  subscriber.cpp
docker_learn/ros2_trainning/ws/ros2_test_1/: CMakeLists.txt  package.xml
docker_learn/ros2_trainning/ws/ros2_test_1/src/: marry.cpp  sum_pub.cpp
intern/src/my_cpp_pkg/: CMakeLists.txt  package.xml
intern/src/my_cpp_pkg/src/: rgb.cpp
intern/src/sonar_cpp/: CMakeLists.txt  package.xml
intern/src/sonar_cpp/src/: sonar.cpp
multipoint/database/: data.yaml  run_data.yaml
multipoint/robot_multipoint/: CMakeLists.txt  package.xml
multipoint/robot_multipoint/action/: multi_point.action
multipoint/robot_multipoint/nodes/: multipoint_client.py  multipoint_server.py
multipoint/robot_teachpoint/: CMakeLists.txt  package.xml
multipoint/robot_teachpoint/action/: teach_point.action
multipoint/robot_teachpoint/nodes/: teach_point_client.py  teach_point_server.py
navigation2_tutorials/nav2_gps_waypoint_follower_demo/urdf/: turtlebot3_waffle_gps.urdf
navigation2_tutorials/nav2_gps_waypoint_follower_demo/worlds/: sonoma_raceway.world
robot_control_nav2/: CMakeLists.txt  package.xml
robot_control_nav2/include/robot_control_nav2/: moving_pose_srv_client.hpp  moving_pose_srv_server.hpp  visibility_control.h
robot_control_nav2/src/: moving_pose_client.cpp  moving_pose_server.cpp  moving_pose_srv_client.cpp  moving_pose_srv_server.cpp  test.yaml
ros1-ros2/: .gitignore
ros1-ros2/src/low_level_vehicle_interface/differential-drive/: CMakeLists.txt  package.xml
ros1-ros2/src/low_level_vehicle_interface/differential-drive/launch/: low_level_cargobot_interface.launch  low_level_reception_interface.launch  low_level_vehicle_interface.launch
ros1-ros2/src/low_level_vehicle_interface/differential-drive/scripts/: cargobot_diff_tf.py  diff_tf.py  pid_velocity.py  twist_to_motors.py  virtual_joystick.py  wheel_scaler.py
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_ackermann/: CMakeLists.txt  package.xml
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.hpp
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp  vesc_to_odom_node.cpp  vesc_to_odom_nodelet.cpp
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_converter/: CMakeLists.txt
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_converter/src/: vesc_cargobot_converter copy.cpp  vesc_cargobot_converter.cpp  vesc_converter.cpp  vesc_reception_converter.cpp
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_driver/: package.xml
ros1-ros2/src/low_level_vehicle_interface/vesc/vesc_driver/src/: vesc_driver_node.cpp  vesc_packet_factory.cpp
ros1-ros2/src/pid/: CMakeLists.txt
ros1-ros2/src/pid/include/pid/: PidConfig.hpp  controller.hpp
ros1-ros2/src/pid/launch/: differential_drive_sim.launch
ros1-ros2/src/pid/src/: autotune.cpp  pid.cpp  plant_sim.cpp  setpoint_node.cpp  sim_time.cpp
ros1_to_ros2/src/low_level_vehicle_interface/: README.md
ros1_to_ros2/src/low_level_vehicle_interface/vesc/vesc/vesc_converter/: CMakeLists.txt
ros1_to_ros2/src/low_level_vehicle_interface/vesc/vesc_driver/: CMakeLists.txt
ros1_to_ros2/src/low_level_vehicle_interface/vesc/vesc_driver/include/vesc_driver/: vesc_driver.h
ros1_to_ros2/src/low_level_vehicle_interface/vesc/vesc_driver/launch/: vesc_cargobot_driver_node.launch  vesc_driver_node.launch
ros1_to_ros2/src/low_level_vehicle_interface/vesc/vesc_driver/src/: vesc_driver.cpp  vesc_driver_nodelet.cpp  vesc_interface.cpp  vesc_packet.cpp
ros1_to_ros2/src/pid/: package.xml
ros1_to_ros2/src/pid/cfg/: Pid.cfg
ros1_to_ros2/src/pid/include/pid/: pid.hpp
ros1_to_ros2/src/pid/src/: controller.cpp
sensor_ws/: frames_2023-11-15_10.09.27.gv  frames_2023-11-29_14.04.14.gv
turtlebot3_ws/: .~.map.yaml.swp  ~.map.pgm  ~.map.yaml
vesc/vesc_driver/: CMakeLists.txt  README.md  package.xml
vesc/vesc_driver/include/vesc_driver/: vesc_driver.h  vesc_interface.h  vesc_packet.h  vesc_packet.hpp  vesc_packet_factory.h
vesc/vesc_driver/launch/: vesc_driver.launch.py  vesc_driver_node.launch.py  vesc_driver_nodelet.launch.py
vesc/vesc_driver/src/: vesc_driver.cpp  vesc_driver_node.cpp  vesc_driver_nodelet.cpp  vesc_interface.cpp  vesc_packet.cpp  vesc_packet_factory.cpp
(+35 files in other folders)
