<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sonar_cpp</name>
  <version>0.0.0</version>
  <description>My Serial Reader in C++</description>
  <maintainer email="khanh191600560@gmail.com">robotic</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

 <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  
<build_depend>serial</build_depend>
<exec_depend>serial</exec_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_pyflakes</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
