<?xml version="1.0"?>
<package format="2">
  <name>vesc_driver</name>
  <version>1.0.0</version>
  <description>
    ROS device driver for VESC open source motor driver.
  </description>
  <maintainer email="SBGRP-git@g.softbank.co.jp">SoftBank Corp.</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <author email="yuki.st16@gmail.com">Yuki Onishi</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp_serialization</build_depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>vesc_msgs</depend>
  <depend>serial</depend>
  <exec_depend>rclcpp_serialization</exec_depend>


  <export>
    <ament_cmake_package_dependencies
      nodelet
      pluginlib
      rclcpp
      std_msgs
      vesc_msgs
      serial
    />
    <node_executable prefix="vesc_driver" target="src/vesc_driver_node.cpp"/>
    <install plugin="ros2" path="share/${PROJECT_NAME}/launch"/>
  </export>
</package>
